# linux_chat_system

./: .gitignore  BEST_PRACTICES.md  CONTRIBUTING.md  GROUP_CHAT_FEATURES.md  IM_Study_Guide_For_Resume.txt  INDEX.md  LICENSE  P2_FEATURES.md  QUICKSTART.md  README.md  build.sh  check.txt  check2.txt  check3.txt  check4.txt  check_send.txt  client_data.db  client_send.cpp  codec_check.txt  codec_loc.txt  conn.cpp  conn.hpp  connection_manager.cpp  connection_manager.hpp  connection_monitor.cpp  connection_monitor.hpp  event_loop.cpp  event_loop.hpp  event_loop_epoll.hpp  group_manager.cpp  group_manager.hpp  im_client  im_client.cpp  im_protocol.cpp  im_protocol.hpp  logger.cpp  logger.hpp  message_handler.cpp  message_handler.hpp  message_storage.cpp  (+26 more)
client_send.dSYM/Contents/: Info.plist
client_send.dSYM/Contents/Resources/DWARF/: client_send
client_send.dSYM/Contents/Resources/Relocations/aarch64/: client_send.yml
qt_client/: CMakeLists.txt  COMPILATION_GUIDE.md  README.md  USAGE_MANUAL.md  build.sh  fix_newline.py
qt_client/src/: main.cpp
qt_client/src/models/: chat_model.cpp  chat_model.hpp
qt_client/src/network/: im_client_network.cpp  im_client_network.hpp
qt_client/src/ui/: main_window.cpp  main_window.hpp
server_im.dSYM/Contents/: Info.plist
server_im.dSYM/Contents/Resources/DWARF/: server_im
server_im.dSYM/Contents/Resources/Relocations/aarch64/: server_im.yml
server_min.dSYM/Contents/: Info.plist
server_min.dSYM/Contents/Resources/DWARF/: server_min
server_min.dSYM/Contents/Resources/Relocations/aarch64/: server_min.yml
test_codec.dSYM/Contents/: Info.plist
test_codec.dSYM/Contents/Resources/DWARF/: test_codec
test_codec.dSYM/Contents/Resources/Relocations/aarch64/: test_codec.yml
